--- a/src/app/edit/editOrganizations/editOrganizations.html
+++ b/src/app/edit/editOrganizations/editOrganizations.html
@@ -40,7 +40,7 @@
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">What geographic area(s) do you serve?</b> {{ organization?.data.geography }}
+                <b style="font-weight: 700;">What geographic area(s) do you serve?</b> {{ organization?.data.geographic_area }}
                 <br>
                 <br>
                 <br>
