--- a/src/app/entry/entryEvent/entryEvent.html
+++ b/src/app/entry/entryEvent/entryEvent.html
@@ -232,37 +232,38 @@
                             <md-checkbox class="block-input"
                                 ng-true-value="true"
                                 ng-false-value="false"
-                                name="eventEnsembleOne"
-                                [(ngModel)]="submission.data.ensembles.Choir">
+                                name="personEnsembleOne"
+                                [(ngModel)]="submission.data.ensembles['Choir']">
                                 Choir
                             </md-checkbox>
                             <md-checkbox class="block-input"
                                 ng-true-value="true"
                                 ng-false-value="false"
-                                name="eventEnsembleTwo"
-                                [(ngModel)]="submission.data.ensembles.Cantor">
+                                name="personEnsembleTwo"
+                                [(ngModel)]="submission.data.ensembles['Cantor']">
                                 Cantor
                             </md-checkbox>
                             <md-checkbox class="block-input"
                                 ng-true-value="true"
                                 ng-false-value="false"
-                                name="eventEnsembleThree"
-                                [(ngModel)]="submission.data.ensembles.Song_Enlivener">
+                                name="personEnsembleThree"
+                                [(ngModel)]="submission.data.ensembles['Song Enlivener']">
                                 Song-Enlivener
                             </md-checkbox>
                             <md-checkbox class="block-input"
                                 ng-true-value="true"
                                 ng-false-value="false"
-                                name="eventEnsembleFour"
-                                [(ngModel)]="submission.data.ensembles.Solo">
+                                name="personEnsembleFour"
+                                [(ngModel)]="submission.data.ensembles['Lead Singer from Band (Solo)']">
                                 Lead Singer from Band (Solo)
                             </md-checkbox>
                             <md-checkbox class="block-input"
                                 ng-true-value="true"
                                 ng-false-value="false"
-                                name="eventEnsembleFive"
-                                [(ngModel)]="submission.data.ensembles.Lead_Singer_from_Band_with_Other_Vocalists">
-                            Lead Singer from Band with Other Vocalists</md-checkbox>
+                                name="personEnsembleFive"
+                                [(ngModel)]="submission.data.ensembles['Lead Singer from Band with Other Vocalists']">
+                                Lead Singer from Band with Other Vocalists
+                            </md-checkbox>
                             <md-checkbox class="block-input" name="other">
                                 <md-input-container class="full-width">
                                 <input md-input mdInput type="text"
