--- a/src/app/entry/entryOrgs/entryOrgs.html
+++ b/src/app/entry/entryOrgs/entryOrgs.html
@@ -225,51 +225,65 @@
                             <md-checkbox class="block-input" 
                                 ng-true-value="true" 
                                 ng-false-value="false"
-                                [(ngModel)]="submission.data.categories.A_hymn_written_prior_to_1970"
-                                name="orgTypeOne"
+                                [(ngModel)]="submission.data.categories['A hymn written prior to 1970']"
+                                name="personTypeOne"
                                 >A hymn written prior to 1970</md-checkbox>
                     
                             <md-checkbox class="block-input"
                                 ng-true-value="true" 
                                 ng-false-value="false"
-                                name="orgTypeTwo"
-                                [(ngModel)]="submission.data.categories.Newly_composed_hymn_within_the_last_10_years">Newly composed hymn (within the last 10 years)</md-checkbox>
+                                name="personTypeTwo"
+                                [(ngModel)]="submission.data.categories['Newly composed hymn (within the last 10 years)']"
+                                >Newly composed hymn (within the last 10 years)</md-checkbox>
                     
                             <md-checkbox class="block-input"
                                 ng-true-value="true" 
                                 ng-false-value="false"
-                                name="orgTypeThree"
-                                [(ngModel)]="submission.data.categories.Praise_and_Worship_Song_CCM">Praise and Worship Song (CCM)</md-checkbox>
+                                name="personTypeNine"
+                                [(ngModel)]="submission.data.categories['A song written by our own artist/leader']"
+                                >A song written by our own artist/leader</md-checkbox>
                     
                             <md-checkbox class="block-input"
                                 ng-true-value="true" 
                                 ng-false-value="false"
-                                name="orgTypeFour"
-                                [(ngModel)]="submission.data.categories.Psalm_Setting">Psalm Setting</md-checkbox>
+                                name="personTypeThree"
+                                [(ngModel)]="submission.data.categories['Praise and Worship Song (CCM)']"
+                                >Praise and Worship Song (CCM)</md-checkbox>
                     
                             <md-checkbox class="block-input"
                                 ng-true-value="true" 
                                 ng-false-value="false"
-                                name="orgTypeFive"
-                                [(ngModel)]="submission.data.categories.Chant_Gregorian_Anglican_Pointed_or_Taize">Chant (Gregorian, Anglican, Pointed or Taize)</md-checkbox>
+                                name="personTypeFour"
+                                [(ngModel)]="submission.data.categories['Psalm Setting']"
+                                >Psalm Setting</md-checkbox>
                     
                             <md-checkbox class="block-input"
                                 ng-true-value="true" 
                                 ng-false-value="false"
-                                name="orgTypeSix"
-                                [(ngModel)]="submission.data.categories.Older_hymn_text_set_to_a_new_contemporary_tune_or_retuned">Older hymn text set to a new contemporary tune (or 're-tuned')</md-checkbox>
+                                name="personTypeFive"
+                                [(ngModel)]="submission.data.categories['Chant (Gregorian, Anglican, Pointed or Taize)']"
+                                >Chant (Gregorian, Anglican, Pointed or Taize)</md-checkbox>
                     
                             <md-checkbox class="block-input"
                                 ng-true-value="true" 
                                 ng-false-value="false"
-                                name="orgTypeSeven"
-                                [(ngModel)]="submission.data.categories.Song_from_another_country_or_World_Song">Song from another country (or 'World Song')</md-checkbox>
+                                name="personTypeSix"
+                                [(ngModel)]="submission.data.categories['Older hymn text set to a new contemporary tune (or re-tuned)']"
+                                >Older hymn text set to a new contemporary tune (or 're-tuned')</md-checkbox>
                     
                             <md-checkbox class="block-input"
                                 ng-true-value="true" 
                                 ng-false-value="false"
-                                name="orgTypeEight"
-                                [(ngModel)]="submission.data.categories.Secular_Song">Secular Song</md-checkbox>
+                                name="personTypeSeven"
+                                [(ngModel)]="submission.data.categories['Song from another country (or World Song)']"
+                                >Song from another country (or 'World Song')</md-checkbox>
+                    
+                            <md-checkbox class="block-input"
+                                ng-true-value="true" 
+                                ng-false-value="false"
+                                name="personTypeEight"
+                                [(ngModel)]="submission.data.categories['Secular Song']"
+                                >Secular Song</md-checkbox>
 
                             <md-checkbox class="block-input">                        
                                 <md-input-container class="full-width">
@@ -290,57 +304,57 @@
                             <md-checkbox class="block-input" 
                                 ng-true-value="true" 
                                 ng-false-value="false"
-                                name="orgInstrumentOne"
-                                [(ngModel)]="submission.data.instruments.Acappella">
+                                name="personInstrumentOne"
+                                [(ngModel)]="submission.data.instruments['Acappella']">
                                 Acappella</md-checkbox>
                     
                             <md-checkbox class="block-input"
                                 ng-true-value="true" 
                                 ng-false-value="false"
-                                name="orgInstrumentTwo"
-                                [(ngModel)]="submission.data.instruments.Organ">
+                                name="personInstrumentTwo"
+                                [(ngModel)]="submission.data.instruments['Organ']">
                                 Organ</md-checkbox>
                     
                             <md-checkbox class="block-input"
                                 ng-true-value="true" 
                                 ng-false-value="false"
-                                name="orgInstrumentThree"
-                                [(ngModel)]="submission.data.instruments.Piano">
+                                name="personInstrumentThree"
+                                [(ngModel)]="submission.data.instruments['Piano']">
                                 Piano</md-checkbox>
                     
                             <md-checkbox class="block-input"
                                 ng-true-value="true" 
                                 ng-false-value="false"
-                                name="orgInstrumentFour"
-                                [(ngModel)]="submission.data.instruments.Guitar_not_full_band">
+                                name="personInstrumentFour"
+                                [(ngModel)]="submission.data.instruments['Guitar (not full band)']">
                                 Guitar (not full band)</md-checkbox>
                     
                             <md-checkbox class="block-input"
                                 ng-true-value="true" 
                                 ng-false-value="false"
-                                name="orgInstrumentFive"
-                                [(ngModel)]="submission.data.instruments.Band_guitar_bass_drums_etc">
+                                name="personInstrumentFive"
+                                [(ngModel)]="submission.data.instruments['Band (guitar, bass, drums, etc...)']">
                                 Band (guitar, bass, drums, etc...)</md-checkbox>
 
                             <md-checkbox class="block-input"
                                 ng-true-value="true" 
                                 ng-false-value="false"
-                                name="orgInstrumentSix"
-                                [(ngModel)]="submission.data.instruments.Orchestra_Wind_Ensemble">
+                                name="personInstrumentSix"
+                                [(ngModel)]="submission.data.instruments['Orchestra/Wind Ensemble']">
                                 Orchestra/Wind Ensemble</md-checkbox>
                     
                             <md-checkbox class="block-input"
                                 ng-true-value="true" 
                                 ng-false-value="false"
-                                name="orgInstrumentSeven"
-                                [(ngModel)]="submission.data.instruments.Handbells">
+                                name="personInstrumentSeven"
+                                [(ngModel)]="submission.data.instruments['Handbells']">
                                 Handbells</md-checkbox>
                     
                             <md-checkbox class="block-input"
                                 ng-true-value="true" 
                                 ng-false-value="false"
-                                name="orgInstrumentEight"
-                                [(ngModel)]="submission.data.instruments.Obligato_instruments_flute_clarinet_trumpet_etc">
+                                name="personInstrumentEight"
+                                [(ngModel)]="submission.data.instruments['Obligato Instruments (flute, clarinet, trumpet, etc...)']">
                                 Obligato Instruments (flute, clarinet, trumpet, etc...)</md-checkbox>
                     
                             <md-checkbox class="block-input">                        
@@ -444,91 +458,91 @@
                         ng-true-value="true"
                         ng-false-value="false"
                         name="congregationEthnicityFive"
-                        [(ngModel)]="submission.data.ethnicities.Asian_Chinese_Heritage_Language">
+                        [(ngModel)]="submission.data.ethnicities['Asian - Chinese Language/Heritage']">
                         Asian - Chinese Language/Heritage
                     </md-checkbox>
                     <md-checkbox class="block-input"
                         ng-true-value="true"
                         ng-false-value="false"
                         name="congregationEthnicityFive"
-                        [(ngModel)]="submission.data.ethnicities.Asian_Indian">
+                        [(ngModel)]="submission.data.ethnicities['Asian - Indian']">
                         Asian - Indian
                     </md-checkbox>
-                     <md-checkbox class="block-input"
+                    <md-checkbox class="block-input"
                         ng-true-value="true"
                         ng-false-value="false"
                         name="congregationEthnicityFive"
-                        [(ngModel)]="submission.data.ethnicities.Asian_Southeast_Asian_Non_Chinese">
+                        [(ngModel)]="submission.data.ethnicities['Asian - Southest Asian Non-Chinese']">
                         Asian - Southest Asian Non-Chinese
                     </md-checkbox>
                     <md-checkbox class="block-input"
                         ng-true-value="true"
                         ng-false-value="false"
                         name="congregationEthnicityFive"
-                        [(ngModel)]="submission.data.ethnicities.Asian_Korean">
+                        [(ngModel)]="submission.data.ethnicities['Asian - Korean']">
                         Asian - Korean
                     </md-checkbox>
                     <md-checkbox class="block-input"
                         ng-true-value="true"
                         ng-false-value="false"
                         name="congregationEthnicityFive"
-                        [(ngModel)]="submission.data.ethnicities.Asian_Japanese">
+                        [(ngModel)]="submission.data.ethnicities['Asian - Japanese']">
                         Asian - Japanese
                     </md-checkbox>
                     <md-checkbox class="block-input"
                         ng-true-value="true"
                         ng-false-value="false"
                         name="congregationEthnicitySix"
-                        [(ngModel)]="submission.data.ethnicities.Black_African_American">
-                        Black - African - American
+                        [(ngModel)]="submission.data.ethnicities['Black - African-American']">
+                        Black - African-American
                     </md-checkbox>
-                     <md-checkbox class="block-input"
+                    <md-checkbox class="block-input"
                         ng-true-value="true"
                         ng-false-value="false"
                         name="congregationEthnicitySix"
-                        [(ngModel)]="submission.data.ethnicities.Black_Sub_Saharan_African">
+                        [(ngModel)]="submission.data.ethnicities['Black - Sub-Saharan African']">
                         Black - Sub-Saharan African
                     </md-checkbox>
                     <md-checkbox class="block-input"
                         ng-true-value="true"
                         ng-false-value="false"
                         name="congregationEthnicityFour"
-                        [(ngModel)]="submission.data.ethnicities.Hispanic_Latino_Spanish_Central_South_American">
+                        [(ngModel)]="submission.data.ethnicities['Hispanic/Latino/Spanish - Central/South American']">
                         Hispanic/Latino/Spanish - Central/South American
                     </md-checkbox>
                     <md-checkbox class="block-input"
                         ng-true-value="true"
                         ng-false-value="false"
                         name="congregationEthnicityFour"
-                        [(ngModel)]="submission.data.ethnicities.Hispanic_Latino_Spanish_Caribbean">
+                        [(ngModel)]="submission.data.ethnicities['Hispanic/Latino/Spanish - Caribbean']">
                         Hispanic/Latino/Spanish - Caribbean
                     </md-checkbox>
                     <md-checkbox class="block-input"
                         ng-true-value="true"
                         ng-false-value="false"
                         name="congregationEthnicitySeven"
-                        [(ngModel)]="submission.data.ethnicities.Native_American_Indigenous_Peoples">
+                        [(ngModel)]="submission.data.ethnicities['Native American/Indigenous Peoples']">
                         Native American/Indigenous Peoples
                     </md-checkbox>
                     <md-checkbox class="block-input"
                         ng-true-value="true"
                         ng-false-value="false"
                         name="congregationEthnicitySeven"
-                        [(ngModel)]="submission.data.ethnicities.Native_Hawaiian_Pacific_Islander">
+                        [(ngModel)]="submission.data.ethnicities['Native American/Pacific Islander']">
                         Native American/Pacific Islander
                     </md-checkbox>
                     <md-checkbox class="block-input"
                         ng-true-value="true"
                         ng-false-value="false"
                         name="congregationEthnicitySeven"
-                        [(ngModel)]="submission.data.ethnicities.North_African_Middle_Eastern">
+                        [(ngModel)]="submission.data.ethnicities['North African/Middle Eastern']">
                         North African/Middle Eastern
                     </md-checkbox>
                     <md-checkbox class="block-input"
                         ng-true-value="true"
                         ng-false-value="false"
                         name="congregationEthnicityOne"
-                        [(ngModel)]="submission.data.ethnicities.White">
+                        [(ngModel)]="submission.data.ethnicities['White']">
                         White
                     </md-checkbox>
                     <md-checkbox class="block-input">
