--- a/src/app/review/reviewLanding/reviewLanding.html
+++ b/src/app/review/reviewLanding/reviewLanding.html
@@ -5,12 +5,12 @@
 
    <div class="entry-body row">     
         <div class="col-md-6 offset-md-3">
-            <div class="card">
-                <div class="card-block">
+            <md-card class="card">
+                <md-card-header>
+                    <md-card-title>Please select the resource type you would like to review.</md-card-title>
+                </md-card-header>
+                <md-card-content>
                     <ul class="nav-sidebar">
-                        <li>Please select the resource type you would like to review.</li>
-                        <br>
-                        <br>
                         <li><a md-button routerLink="/review/resources">Resources</a></li>
                         <br>
                         <li><a md-button routerLink="/review/person">Person</a></li>
@@ -21,8 +21,8 @@
                         <br>
                         <li><a md-button routerLink="/review/events">Event</a></li>
                     </ul>
-                </div>
-            </div>
+                </md-card-content>
+            </md-card>
         </div>
     </div>
 </div>
