--- a/src/app/entry/entryPerson/entryPerson.html
+++ b/src/app/entry/entryPerson/entryPerson.html
@@ -17,7 +17,6 @@
                     *ngIf="submission">
 
                     <div class="form-group">
-                        <!--<label for="personFname">First Name</label>-->
                         <md-input-container class="full-width">
                             <input md-input mdInput type="text"
                             placeholder="First Name"
@@ -38,7 +37,6 @@
                     </div>
 
                     <div class="form-group">
-                        <!--<label for="personLname">Last Name</label>-->
                         <md-input-container class="full-width">
                             <input md-input mdInput type="text"
                             placeholder="Last Name"
@@ -59,8 +57,6 @@
                     </div>
 
                     <div class="form-group">
-                        <!--<label for="personEmail">Email
-                            </label>-->
                         <md-input-container class="full-width">
                             <input md-input mdInput type="text"
                             placeholder="Email"
@@ -118,7 +114,6 @@
                     </div>
 
                     <div class="form-group">
-                        <!--<label for="personUrl">Personal/Professional Website</label>-->
                         <md-input-container class="full-width">
                             <input md-input mdInput type="url" 
                             placeholder="Personal/Professional Website"
@@ -164,7 +159,6 @@
                     </div>
 
                     <div class="form-group">
-                        <!--<label for="personSocial">Facebook, Twitter, and other Social Media Connections</label>-->
                         <md-input-container class="full-width">
                             <input md-input mdInput type="url" 
                             placeholder="Other Social Media Connections"
@@ -176,7 +170,6 @@
                     </div>
 
                     <div class="form-group">
-                        <!--<label for="personEmphasis">Main Topic/Emphasis</label>-->
                         <md-input-container class="full-width">
                             <input md-input mdInput type="text"
                             placeholder="Main Topic/Emphasis"
@@ -596,6 +589,18 @@
                                 </md-input-container>
                             </md-checkbox>
                     </div>
+
+                    <div class="form-group">
+                        <label for="resourcePractSchol">Do you work with resources that are practical, scholarly, or both?</label>
+                        <md-radio-group [(ngModel)]="submission.data.pract_schol" name="personPractSchol" required>
+                            <md-radio-button class="block-input" value="Practical" required> 
+                                Practical</md-radio-button>
+                            <md-radio-button class="block-input" value="Scholarly"> 
+                                Scholarly</md-radio-button>
+                            <md-radio-button class="block-input" value="Both"> 
+                                Both</md-radio-button>
+                        </md-radio-group>
+                    </div>           
           
                     <md-card-actions>
                         <button md-raised-button color="primary" type="submit" 
