editted pract/schol

--- a/src/app/edit/editPerson/editPerson.html
+++ b/src/app/edit/editPerson/editPerson.html
@@ -76,6 +76,10 @@
                 <br>
                 <br>
                 <br>
+                <b style="font-weight: 700;">Do you work with resources that are practical, scholarly, or both?</b> {{ person?.data.pract_schol }}
+                <br>
+                <br>
+                <br>
                 <button md-raised-button color="primary" type="submit" (click)="approve(person?.id)">
                     Approve
                 </button>
