changes for brian

--- a/src/app/entry/entryCongregation/entryCongregation.html
+++ b/src/app/entry/entryCongregation/entryCongregation.html
@@ -192,6 +192,13 @@
                                 name="personTypeEight"
                                 [(ngModel)]="submission.data.categories['Secular Song']"
                                 >Secular Song</md-checkbox>
+                            
+                            <md-checkbox class="block-input"
+                                ng-true-value="true" 
+                                ng-false-value="false"
+                                name="personTypeEight"
+                                [(ngModel)]="submission.data.categories['Liturgical Music']"
+                                >Liturgical Music</md-checkbox>
 
                             <md-checkbox class="block-input">                        
                                 <md-input-container class="full-width">
@@ -266,6 +273,20 @@
                                 name="personInstrumentEight"
                                 [(ngModel)]="submission.data.instruments['Obligato Instruments (flute, clarinet, trumpet, etc...)']">
                                 Obligato Instruments (flute, clarinet, trumpet, etc...)</md-checkbox>
+
+                            <md-checkbox class="block-input"
+                                ng-true-value="true" 
+                                ng-false-value="false"
+                                name="personInstrumentEight"
+                                [(ngModel)]="submission.data.instruments['Descants']">
+                                Descants</md-checkbox>
+
+                            <md-checkbox class="block-input"
+                                ng-true-value="true" 
+                                ng-false-value="false"
+                                name="personInstrumentTen"
+                                [(ngModel)]="submission.data.instruments['Pre-Recorded Tracks/Accompaniments']">
+                                Pre-Recorded Tracks/Accompaniments</md-checkbox>
                     
                             <md-checkbox class="block-input">                        
                                 <md-input-container class="full-width">
@@ -407,8 +428,8 @@
                         ng-true-value="true"
                         ng-false-value="false"
                         name="congregationEthnicityFive"
-                        [(ngModel)]="submission.data.ethnicities['Asian - Southest Asian Non-Chinese']">
-                        Asian - Southest Asian Non-Chinese
+                        [(ngModel)]="submission.data.ethnicities['Asian - Southeast Asian Non-Chinese']">
+                        Asian - Southeast Asian Non-Chinese
                     </md-checkbox>
                     <md-checkbox class="block-input"
                         ng-true-value="true"
