--- a/src/app/edit/editResources/editResources.html
+++ b/src/app/edit/editResources/editResources.html
@@ -76,6 +76,9 @@
                 <button md-raised-button color="primary" type="submit" (click)="approve(resource?.id)">
                     Approve
                 </button>
+                <button md-button (click)="edit(resource?.id)">
+                    Edit
+                </button>
                 <button md-button (click)="delete()">
                     Delete
                 </button>
